--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,47 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App {
+  text-align: center; 
+  background-color: #282c34;
+}
+
+.header {
+  display: flex;
+  justify-content: center;
+  background-color: #2c2727;
+  color: rgb(255, 255, 255);
+  font-size: 24px;
+  font-family: Arial, sans-serif;
+  padding: 20px;
+}
+
+.types {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.pokemonArray {
+ display: grid;
+ grid-template-columns: repeat(3, 1fr);
+ grid-gap: 20px;
+ padding: 10px;
+}
+
+.pokes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border: 1px solid black;
+}
+
+button {
+display: flex;
+justify-content: center;
+}
+
