--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,9 @@ display: flex;
 justify-content: center;
 }
 
+.forms {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
