--- a/src/index.css
+++ b/src/index.css
@@ -17,14 +17,39 @@ code {
   background-color: #282c34;
 }
 
+/* .container {
+  display: flex;
+  flex-direction: column;
+  width: auto;
+  height: auto;
+}
+
 .header {
   display: flex;
   justify-content: center;
-  background-color: #2c2727;
-  color: rgb(255, 255, 255);
-  font-size: 24px;
-  font-family: Arial, sans-serif;
+  background-color: #282c34;
   padding: 20px;
+  width: 100%;
+  height: 100px;
+} */
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  width: 100%;
+  height: 100px;
 }
 
 .types {
@@ -57,7 +82,12 @@ justify-content: center;
 
 .forms {
   display: flex;
-  flex-direction: column;
   justify-content: center;
+  align-self: center;
 }
 
+.myButtons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
