--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("https://wallup.net/wp-content/uploads/2016/05/24/143432-nature-Pokemon-748x468.jpg");
 }
 
 code {
@@ -16,22 +17,6 @@ code {
   text-align: center; 
   background-color: #282c34;
 }
-
-/* .container {
-  display: flex;
-  flex-direction: column;
-  width: auto;
-  height: auto;
-}
-
-.header {
-  display: flex;
-  justify-content: center;
-  background-color: #282c34;
-  padding: 20px;
-  width: 100%;
-  height: 100px;
-} */
 
 .container {
   display: flex;
@@ -73,6 +58,7 @@ code {
   justify-content: center;
   text-align: center;
   border: 1px solid black;
+  background-color: beige;
 }
 
 button {
@@ -83,11 +69,23 @@ justify-content: center;
 .forms {
   display: flex;
   justify-content: center;
-  align-self: center;
 }
 
 .myButtons {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  padding:10px;
 }
+
+.NextPrevpage-buttons {
+  display: flex;
+  justify-content: center;
+}
+
+.type-header {
+  display: flex;
+  justify-content: center;
+  padding-top: 10px;
+}
+
