--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ code {
 .pokemonArray {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
- grid-gap: 20px;
+ gap: 20px;
  padding: 10px;
  background-color: rgb(70, 155, 216);
 }
